# glypho

./: .SRCINFO  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs  cargo-sources.yaml  cliff.toml  documentacion_glypho.md  flake.nix  org.trafkin.Glypho.yml  rust-toolchain.toml  test.md
.github/workflows/: crates-release.yml  flakehub-publish-rolling.yml
docs/: cargo-release.md  deb-release.md  github-actions-crates-release.md
examples/: basics.md  math.md  test.md
flatpak/: org.trafkin.Glypho.yml
glypho-web/: package-lock.json  package.json
glypho-web/src/: content-renderer.js  custom.css  index.html  index.js  prism.css  style.css
glypho-web/src/themes/: catpuccin.css  dracula.css  gruvbox.css  kanagawa.css  nord.css
nvim-plugin/glypho-nvim/lua/: glypho.lua
nvim-plugin/glypho-nvim/plugin/: glypho.vim
src/: cli.rs  error.rs  glypho.css  index.html  main.rs  state.rs  style.css  tailwind.css  template.html  template.rs  wikilinks.rs  wrapper.rs
src/assets/: index.html  prism.css  prism.js  style.css  tailwind.css
src/snapshots/: glypho__wikilinks__tests__complex_document_snapshot.snap  glypho__wikilinks__tests__edge_cases_snapshot.snap
tests/: integration.rs
tests/common/: mod.rs
tests/fixtures/: simple.md
tests/integration/: mod.rs  server_test.rs
tests/integration_tests/: mod.rs  server_test.rs
