[package]
name = "glypho"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
eyre = "0.6.12"
handlebars = "6.3.2"
markdown = { version = "1.0.0", features = ["serde"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "registry", "std"] }
tracing = "0.1.41"
async-watcher = "0.3.0"
futures-util = "0.3.31"
futures-core = "0.3.31"
axum = "0.8.4"
futures = "0.3.31"
bytes = "1.10.1"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
thiserror = "2.0.12"
clap-stdin = "0.7.0"
open = "5.3.2"
color-eyre = "0.6.5"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "*", features = ["secure"] }


[build-dependencies]
walkdir = "2.5.0"
eyre = "0.6.12"
handlebars = "6.3.2"

[profile.release]
opt-level = "z"
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
