[package]
name = "glypho"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
eyre = "0.6.12"
markdown = { version = "1.0.0", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "registry", "std"] }
tracing = "0.1.41"
async-watcher = "0.4.0"
axum = { version = "0.8.7", features = ["macros", "query", "tokio"] }
futures = "0.3.31"
bytes = "1.10.1"
tower-http = { version = "0.6.8", features = ["fs"] }
thiserror = "2.0.12"
clap-stdin = "0.8.0"
open = "5.3.2"
color-eyre = "0.6.5"
asynk-strim = "0.1.4"
datastar = { version = "0.3.1", features = ["axum"] }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "*", features = ["secure"] }


[build-dependencies]
walkdir = "2.5.0"
eyre = "0.6.12"
handlebars = "6.3.2"

[profile.release]
opt-level = "z"
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
