[package]
name = "glypho"
version = "0.2.1"
edition = "2024"
description = "A fast, minimal CLI tool to render Markdown files via a local web server"
license = "Apache-2.0"
repository = "https://github.com/trafkin/glypho"
readme = "README.md"
keywords = ["markdown", "cli", "viewer", "web-server"]
categories = ["command-line-utilities"]
exclude = [".pre-commit-config.yaml", ".direnv", "result", "flake.lock", ".flatpak-builder", "repo"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
eyre = "0.6.12"
markdown = { version = "1.0.0", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "registry", "std"] }
tracing = "0.1.41"
async-watcher = "0.4.0"
axum = { version = "0.8.8", features = ["macros", "query", "tokio", "json"] }
futures = "0.3.31"
bytes = "1.10.1"
tower-http = { version = "0.7.0", features = ["fs"] }
thiserror = "2.0.12"
clap-stdin = "0.8.0"
open = "5.3.2"
color-eyre = "0.6.5"
asynk-strim = "0.1.4"
datastar = { version = "0.3.1", features = ["axum"] }
xdg = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
lazy-regex = "3.5.1"
reqwest = { version = "0.13.1", default-features = false, features = ["json"] }


[dev-dependencies]
# Async testing
tokio-test = "0.4"

# Mocking
mockall = "0.14"

# File system testing
tempfile = "3.20"
assert_fs = "1.0"

# Web testing
axum-test = "18.7"
tower-test = "0.4"
tower = "0.5"

# Test utilities
rstest = "0.24"
insta = "1.42"
proptest = "1.6"
serde_json = "1.0"

# Async traits
async-trait = "0.1"

[build-dependencies]
walkdir = "2.5.0"
eyre = "0.6.12"
handlebars = "6.3.2"

[profile.release]
opt-level = "z"
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
